hphp/hack/test/typecheck/reactive/print_in_rx8_2.php
<?hh // strict

<<__RxLocal>>
function rxlocal(): void {
  echo 2;
}
